# backend/routing/serviceRouter.js
@@ -3,10 +3,9 @@ const router = express.Router();
 const servicesHandler = require('./handlers/serviceHandler.js');
 const verifyToken = require('./authMiddleware')
 
-
+router.delete('/availability/:id', verifyToken, servicesHandler.deleteAvailability);
 router.post('/:id_service/availability', verifyToken, servicesHandler.addAvailability);
 router.get('/:id_service/availability', servicesHandler.getAvailabilities)
-router.delete('/:id_service/availability/:id', verifyToken, servicesHandler.deleteAvailability);
 router.get('/:id_service',servicesHandler.getService)
 
 module.exports = router;
